# TKinect-2016

./: README.md
webGLViewer/: index.php
webGLViewer/app/helpers/: conversorNubeKinect.php  url.php
webGLViewer/app/views/: constantes.php  footer.php  header.php  hola.cpp  home.php  viewer.php  (+1 more)
webGLViewer/cgi-bin/: hola.cgi  hola.cpp
webGLViewer/cgi-bin/main/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conversorCgi.cpp  debug.cgi  dir  dirEntTest.cpp  prueba  prueba.cpp
webGLViewer/cgi-bin/main/lib/: conversorCgi.h
webGLViewer/cgi-bin/pcd_to_csv_webGL-guille/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  error.txt  generar_csv_desde_pcd.cpp
webGLViewer/cgi-bin/pcd_to_csv_webGL-guille/lib/: generar_csv_desde_pcd.h
webGLViewer/cgi-bin/pcd_to_csv_webGL-guille/srv_tools-indigo/pointcloud_tools/: CMakeCache.txt
webGLViewer/cgi-bin/pcd_to_json_script/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  imprimir_datos_json.cpp
webGLViewer/cgi-bin/pcd_to_json_script/lib/: imprimir_datos_json.h
webGLViewer/cgi-bin/pcd_to_png/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  generar_imagen_png.cpp  organizar_nube_pcd.cpp
webGLViewer/cgi-bin/pcd_to_png/obtener_normales_de_pcd/: CMakeCache.txt  Makefile  cmake_install.cmake  greedy_projection  greedy_projection.cpp
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  PCLConfig.cmake  cmake_install.cmake  cpack_options.cmake  pcl.dot  uninstall_target.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/common/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/doc/advanced/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/doc/doxygen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/doc/tutorials/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/features/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/filters/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/geometry/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/include/pcl/: pcl_config.h
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/io/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/io/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/io/tools/ply/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/kdtree/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/keypoints/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/lib/: libpcl_io_ply.so.1.7.2
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/octree/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/outofcore/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/outofcore/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/people/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/recognition/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/registration/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/sample_consensus/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/search/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/segmentation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/surface/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/tracking/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/visualization/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/cgi-bin/pcd_to_png/pcl-pcl-1.7.2rc2.1/visualization/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
webGLViewer/generar_csv_php/: generar_csv.php
webGLViewer/prueba-canvas-con-Bootstrap/: prueba_Bootstrap_webGL.html
(+20 files in other folders)
